hw4/manifests/v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw4-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: otus-hw4
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: otus-hw4
        version: v1
    spec:
      containers:
        - name: otus-hw4
          image: ringob/otus-hw4-service:0.1.0
---
apiVersion: v1
kind: Service
metadata:
  name: otus-hw4-v1
  labels:
    version: v1
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: otus-hw4
    version: v1
