hw4/manifests/service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: otus-hw4-ingress
spec:
  hosts:
    - '*'
  gateways:
    - otus-hw4-gateway
  http:
    - route:
        - destination:
            host: otus-hw4-v1
          weight: 50
        - destination:
            host: otus-hw4-v2
          weight: 50
